inou/prp/tests/errors/lg_mux_misaligned.prp
/*
:name: lg_mux_misaligned
:type: error
:tolg: 1
:error: mixes values at different cycles
*/

// A MUX select never adds path depth and its arms UNION into a cycle range
// (mod_twopaths) — a raw-select mux is no longer a misalignment. What still
// mixes cycles is a COMB op over values from different stages: here a state
// reg's q (home stage 0; the LNAST pass cannot derive it, so the LG checker
// owns the diagnosis) added to a stage[1]-delayed value.
mod pick(a:u8, b:u8) -> (out:u10@[1]) {
  reg acc:u8 = 0
  acc = acc ^ a
  stage[1] bd = b
  out = acc + bd
}
